@@ -16,6 +16,8 @@ changes relative to sbcl-1.3.14:
   * new feature: SB-LINKABLE-RUNTIME, allowing linking with extra object
     files to help with delivery of executables.  (Thanks to François-René
     Rideau)
+  * bug fix: data race in GENTEMP fixed - it can no longer return the
+    same interned symbol to multiple threads if called concurrently
 
 changes in sbcl-1.3.14 relative to sbcl-1.3.13:
   * minor incompatible change: the SB-PCL walker no longer recognizes
